@@ -8,7 +8,8 @@ mm_coeff = 2.5
 
 # [SHOW]
 # ? at the end means that the column is optional and it's only showed when it contains different values
-leaderboard = "POS,NAME,SCORE,GAMES,MU,SIGMA,ACTIVE?,ERRORS?,DESCRIPTION?"
+date_format = "%Y/%m/%d %H:%M:%S" #more about the format: https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes
+leaderboard = "POS,NAME,SCORE,GAMES,MU,SIGMA,ACTIVE?,ERRORS?,DATE,DESCRIPTION?"
 
 # [RANKING MODEL]
 model = "trueskill"
